// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders 1`] = `
.glamor-0 {
  box-sizing: border-box;
  margin: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

<div
  className="glamor-0"
/>
`;

exports[`Box renders with props 1`] = `
.glamor-0 {
  box-sizing: border-box;
  width: 100%;
  margin: 4px;
  padding-left: 4px;
  padding-right: 4px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

@media screen and (min-width:40em) {
  .glamor-0 {
    margin: 8px;
    padding-left: 8px;
    padding-right: 8px;
  }
}

<div
  className="glamor-0"
/>
`;

exports[`Flex renders 1`] = `
.glamor-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
/>
`;

exports[`Flex renders with column prop 1`] = `
.glamor-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
  column={true}
/>
`;

exports[`Flex renders with props 1`] = `
.glamor-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  className="glamor-0"
  direction="column"
/>
`;

exports[`Flex renders with responsive props 1`] = `
.glamor-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media screen and (min-width:40em) {
  .glamor-0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:40em) {
  .glamor-0 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<div
  className="glamor-0"
  direction={
    Array [
      "column",
      "row",
    ]
  }
/>
`;
